implementados varios cambios
implementado la interfaz del administrador.
conectado videojuegos a la base de datos.
implementado seminuevos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,11 @@
     <string name="item_pedidos">Pedidos</string>
     <string name="item_cerrar_sesion">Cerrar Sesión</string>
 
+    <string name="item_gestion_usuarios">Gestión Usuarios</string>
+    <string name="item_gestion_proveedores">Gestión proveedores</string>
+    <string name="item_gestion_videojuegos">Gestión videojuegos</string>
+    <string name="item_gestion_pedidos">Gestión pedidos</string>
+
     <string name="titulo_comidas_populares">Lo más pedido</string>
 
     <string name="titulo_tab_platillos">PLATILLOS</string>
